semantics/snapshots/better_api_semantics__text__test__new_cache-2.snap
---
source: semantics/text.rs
expression: res.reports
---
[
    Report {
        severity: Error,
        title: "expected value, found an unknown token",
        label: Some(
            Label {
                message: "expected value",
                span: Span {
                    start: 18,
                    end: 28,
                },
            },
        ),
        note: None,
    },
]
